Fixed image cropping to crop tighter to the borders

--- a/static/assets/css/dotaleaf.less
+++ b/static/assets/css/dotaleaf.less
@@ -56,11 +56,11 @@ body {
     }
 
 .item_image {
-    width: 1.11111 * @dim-item-img-width;
-    height: 1.11111 * @dim-item-img-height;
+    width: 1.03 * @dim-item-img-width;
+    height: 1.05 * @dim-item-img-height;
     position: absolute;
-    left: -5%;
-    top: -5%;
+    left: -1.5%;
+    top: -2%;
 }
 
 .span_link {
